src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>netsuite_conn__Discount_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discount Item</label>
        <referenceTo>netsuite_conn__Discount_Item__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Item_Id_Import__c</fullName>
        <label>NetSuite Item Id Import</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__NetSuite_Item_Key_Id__c</fullName>
        <externalId>true</externalId>
        <label>NetSuite Item Key Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>netsuite_conn__Pushed_From_NetSuite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed From NetSuite</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>